--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/firestore": "^7.8.0",
-    "@hapi/hapi": "^21.3.10",
     "@tensorflow/tfjs-node": "^4.14.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
