--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bangkit-mlgc",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,14 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/firestore": "^7.8.0",
+    "@google-cloud/firestore": "^7.6.0",
+    "@hapi/hapi": "^21.3.9",
     "@tensorflow/tfjs-node": "^4.14.0",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
-  }
+    "nodemon": "^3.1.0"
+  },
+  "description": ""
 }
